--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -3,6 +3,10 @@ body{
     color: white;
 }
 
+main{
+    margin-top: 100px;
+}
+
 .shows-by-category{
     padding: 0 60px 0 60px;
     
@@ -30,6 +34,7 @@ ul::-webkit-scrollbar{
     object-fit: contain;
     width: 200px;
     transition: transform 450ms;
+    padding: 10px;
 }
 
 .poster:hover{
