logo image added

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -36,3 +36,13 @@ h4 a {
     outline: none;
 }
 
+.search-poster{ padding-top: 100px;}
+
+.bee {
+    height: 50px;}
+
+.logo {
+    display: flex;
+    align-items: center;
+
+}
