--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,6 +1,6 @@
 body{
-    background-color: #424343;
-    color: white;
+    background-color: grey;
+    color: #F7cb15;
 }
 
 main{
@@ -28,13 +28,16 @@ ul::-webkit-scrollbar{
     /* margin-right: 20px; */
     list-style: none;
     padding-right:20px;
+    color: white;
 }
 
 .poster{
     object-fit: contain;
     width: 200px;
+    height:300px;
     transition: transform 450ms;
-    padding: 10px;
+    
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .poster:hover{
