--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -41,7 +41,7 @@ h4 a {
 }
 
 .search {
-    background-color: #F7cb15;
+    background-color: white;
     border-radius: 25px;
     padding:5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -53,7 +53,7 @@ h4 a {
     outline: none;
     border-style: none;
     border-radius: 25px;
-    background-color: #F7cb15;
+    background-color:white;
     padding: 10px;
     width:200px;
     height:40px;
@@ -75,6 +75,7 @@ h4 a {
 .links_searchbar{
     display: flex;
     align-items: center;
+    
 }
 
 .menu-item  a{
@@ -100,6 +101,7 @@ h4 a {
     outline: none;
     cursor: pointer;
     border-radius: 50%;
+    background-color: #F7cb15;
   }
  
  
