--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,6 @@ button {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-style: none;
     color: grey;
-}
+    margin:10px;
+    cursor: pointer;
+}   
