--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -72,6 +72,11 @@ h4 a {
 
 }
 
+.link {
+    color: grey;
+    text-decoration: none;
+}
+
 .links_searchbar{
     display: flex;
     align-items: center;
@@ -81,6 +86,7 @@ h4 a {
 .menu-item  a{
     text-decoration: none;
     color: grey;
+    
 }
 
 .menu-item {
